##########################
# Setup.py Configuration #
##########################

[metadata]
name = adasamp-pareto
version = 1.1
description = Adaptive bayes-sampling for multi-criteria optimization
long_description = file: README.rst
long_description_content_type = text/x-rst

# URLs associated with the project
url = https://github.com/RaoulHeese/adasamp-pareto
download_url = https://github.com/RaoulHeese/adasamp-pareto
project_urls =
    Source Code = https://github.com/RaoulHeese/cadasamp-pareto
	
# Author information
author = Raoul Heese
author_email = raoul.heese@gmail.com
maintainer = Raoul Heese
maintainer_email = raoul.heese@gmail.com

# License information
license = MIT
license_files = LICENSE

[options]
install_requires =
	numpy
	scipy
	pathos
	dill
	matplotlib

packages = find:
package_dir =
    = src

[options.packages.find]
where = src